hphp/hack/test/typecheck/reified_generics/box_parametrized.php.exp
File "box_parametrized.php", line 13, characters 14-20:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "box_parametrized.php", line 8, characters 7-13:
  Definition is here
File "box_parametrized.php", line 20, characters 21-27:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "box_parametrized.php", line 8, characters 7-13:
  Definition is here
File "box_parametrized.php", line 27, characters 28-34:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "box_parametrized.php", line 8, characters 7-13:
  Definition is here
File "box_parametrized.php", line 31, characters 35-41:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "box_parametrized.php", line 8, characters 7-13:
  Definition is here
